Refactor: judgeGame 메소드 로직 일부 수정 RacingCarGameController 클래스내 judgeGame메소드 중 로직 일부 수정